# PROJECT

./: .gitignore  a.json  api.py  auth.py  create_initial_admin.py  dependencies.py  dummy_file_1.txt  dummy_file_10.txt  dummy_file_2.txt  dummy_file_3.txt  dummy_file_4.txt  dummy_file_5.txt  dummy_file_6.txt  dummy_file_7.txt  dummy_file_8.txt  dummy_file_9.txt  main.py  metadata_backup.json  my_project_brief.doc  papilv_filemeta.db  pyproject.toml  pyproject.toml.save  requirements.txt  run_db_init.py  schemas.py  setup.py  test2  test_document.txt  test_init.py
filemeta/: api.py  cli.py  database.py  metadata_manager.py  models.py  utils.py
filemeta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
filemeta/api/: auth.py  dependencies.py  main.py  schemas.py
papilv_filemeta/: cli.py  create_initial_user.py  database.py  metadata_manager.py  models.py  utils.py
papilv_filemeta/api/: auth.py  dependencies.py  dependencies.py.save  main.py  schemas.py
pranavik928_filemeta.egg-info/: PKG-INFO
test_install_dir/test_env/: pyvenv.cfg
